--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
   </head> 
   <body>
     <section class="home" id="home">
-      <div class="container-fluid">
         <div class="logo">
-          <img src="Assets/image.webp" />
+          <img src="Assets/image.webp" class="img-responsive"/>
         </div>
         <nav>
           <ul>
@@ -54,9 +53,8 @@
           <h1>ARYAN SHARMA</h1>
         </div>
         <div class="image-main">
-          <img src="Assets/main.jpg" />
+          <img src="Assets/main.jpg" class="img-responsive"/>
         </div>
-      </div>
     </section>
 
     <section class="about" id="about">
