--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <title>Aryan Sharma</title>
   </head>
   <body>
+
+    <!-- home page -->
+
     <section class="home" id="home">
       <div class="logo">
         <img src="Assets/image.webp" class="img-responsive" />
@@ -57,6 +60,8 @@
         <img src="Assets/main.jpg" class="img-responsive" />
       </div>
     </section>
+
+    <!-- about page -->
 
     <section class="about" id="about">
       <div class="container">
@@ -87,6 +92,8 @@
         </div>
       </div>
     </section>
+
+    <!-- projects page -->
 
     <section class="projects" id="projects">
       <div class="container">
@@ -133,6 +140,8 @@
       </div>
     </section>
 
+    <!-- contacts page -->
+
     <section class="contacts" id="contacts">
       <div class="container">
         <div class="row">
@@ -151,7 +160,8 @@
             <div class="insta col-lg-2">
               <a
                 href="#"
-                data-toggle="tooltip" data-placement="top" 
+                data-toggle="tooltip"
+                data-placement="top"
                 title="Professioanlism"
                 ><span
                   class="iconify"
@@ -191,14 +201,13 @@
       </div>
     </section>
 
-    <script>
-     
-    </script>
-
+    <!-- copyright footer -->
+    
     <footer>
       <div class="container-fluid">
         &copy; Copyrights 2021 by Aryan Sharma. All Rights Reserved.
       </div>
     </footer>
+
   </body>
 </html>
