--- a/index.html
+++ b/index.html
@@ -30,15 +30,19 @@
     <title>Aryan Sharma</title>
   </head>
   <body>
-
     <!-- home page -->
 
     <section class="home" id="home">
-      <div class="logo">
+      <!-- <div class="logo">
         <img src="Assets/image.webp" class="img-responsive" />
-      </div>
+      </div> -->
       <nav>
         <ul>
+          <li>
+            <div class="logo">
+              <p>Aryan Sharma</p>
+            </div>
+          </li>        
           <li>
             <a href="#home">HOME</a>
           </li>
@@ -202,12 +206,11 @@
     </section>
 
     <!-- copyright footer -->
-    
+
     <footer>
       <div class="container-fluid">
         &copy; Copyrights 2021 by Aryan Sharma. All Rights Reserved.
       </div>
     </footer>
-
   </body>
 </html>
