--- a/index.html
+++ b/index.html
@@ -30,40 +30,32 @@
     <title>Aryan Sharma</title>
   </head>
   <body>
-    <!-- home page -->
 
-    <section class="home" id="home">
-      <!-- <div class="logo">
-        <img src="Assets/image.webp" class="img-responsive" />
-      </div> -->
-      <nav>
-        <ul>
-          <li>
-            <div class="logo">
-              <p>Aryan Sharma</p>
-            </div>
-          </li>        
-          <li>
-            <a href="#home">HOME</a>
-          </li>
-          <li>
-            <a href="#about">ABOUT</a>
-          </li>
-          <li>
-            <a href="#projects">PROJECTS</a>
-          </li>
-          <li>
-            <a href="#contacts">CONTACTS</a>
-          </li>
-        </ul>
+    <!-- navbar -->
+
+      <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" href="#">Aryan Sharma</a>
+          <span class="navbar-toggler hamburger hamburger-icon" data-toggle="collapse" data-target="#navbarNavAltMarkup"><span></span></span>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ml-lg-auto">
+            <a class="nav-item nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="#about">About</a>
+            <a class="nav-item nav-link" href="#projects">Projects</a>
+            <a class="nav-item nav-link" href="#contacts">Contacts</a>
+          </div>
+        </div>
       </nav>
-      <div class="name-main">
-        <h1>ARYAN SHARMA</h1>
-      </div>
-      <div class="image-main">
-        <img src="Assets/main.jpg" class="img-responsive" />
-      </div>
-    </section>
+      
+    <!-- homepage -->
+    
+  <section class="home" id="home">
+    <div class="name-main">
+      <h1>ARYAN SHARMA</h1>
+    </div>
+    <div class="image-main">
+      <img src="Assets/main.jpg" class="img-responsive" />
+    </div>
+  </section>
 
     <!-- about page -->
 
@@ -72,11 +64,11 @@
         <div class="row">
           <div class="about-title col-lg-6">
             <h1>About me</h1>
-            <span
+            <h1><span
               class="iconify"
               data-icon="mdi:account"
               data-inline="false"
-            ></span>
+            ></span></h1>
           </div>
           <div class="about-text col-lg-6">
             <h3>
@@ -101,7 +93,6 @@
 
     <section class="projects" id="projects">
       <div class="container">
-        <div class="container-fluid">
           <div class="row">
             <div class="camera-icon col-lg-2">
               <span
@@ -110,7 +101,7 @@
                 data-inline="true"
               ></span>
             </div>
-            <div class="capture col-lg-10">
+            <div class="capture col-lg-1">
               <h1>CAPTURES</h1>
             </div>
           </div>
