--- a/index.html
+++ b/index.html
@@ -30,69 +30,78 @@
     <title>Aryan Sharma</title>
   </head>
   <body>
-
-    <!-- navbar -->
+    <div class="wrapper">
+      <!-- navbar -->
 
       <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="#">Aryan Sharma</a>
-          <span class="navbar-toggler hamburger hamburger-icon" data-toggle="collapse" data-target="#navbarNavAltMarkup"><span></span></span>
+        <span class="navbar-brand" href="#">Aryan Sharma</span>
+        <span
+          class="navbar-toggler hamburger hamburger-icon"
+          data-toggle="collapse"
+          data-target="#navbarNavAltMarkup"
+          ><span></span
+        ></span>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-lg-auto">
-            <a class="nav-item nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="#"
+              >Home <span class="sr-only">(current)</span></a
+            >
             <a class="nav-item nav-link" href="#about">About</a>
             <a class="nav-item nav-link" href="#projects">Projects</a>
             <a class="nav-item nav-link" href="#contacts">Contacts</a>
           </div>
         </div>
       </nav>
-      
-    <!-- homepage -->
-    
-  <section class="home" id="home">
-    <div class="name-main">
-      <h1>ARYAN SHARMA</h1>
-    </div>
-    <div class="image-main">
-      <img src="Assets/main.jpg" class="img-responsive" />
-    </div>
-  </section>
 
-    <!-- about page -->
+      <!-- homepage -->
 
-    <section class="about" id="about">
-      <div class="container">
-        <div class="row">
-          <div class="about-title col-lg-6">
-            <h1>About me</h1>
-            <h1><span
-              class="iconify"
-              data-icon="mdi:account"
-              data-inline="false"
-            ></span></h1>
-          </div>
-          <div class="about-text col-lg-6">
-            <h3>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et,
-              architecto.
-            </h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perspiciatis similique ea vero debitis sed sint quis dolores!
-              Quidem ratione temporibus voluptas minima harum blanditiis animi
-              fugiat atque laboriosam tempore, commodi laborum recusandae
-              doloribus quod, eaque pariatur, cupiditate maiores explicabo sunt
-              praesentium deserunt obcaecati? Ea tenetur sit voluptatum nisi
-              maiores facere.
-            </p>
+      <section class="home" id="home">
+        <div class="name-main">
+          <h1>ARYAN SHARMA</h1>
+        </div>
+        <div class="image-main">
+          <img src="Assets/main.jpg" class="img-responsive" />
+        </div>
+      </section>
+
+      <!-- about page -->
+
+      <section class="about" id="about">
+        <div class="container">
+          <div class="row">
+            <div class="about-title col-lg-6">
+              <h1>About me</h1>
+              <h1>
+                <span
+                  class="iconify"
+                  data-icon="mdi:account"
+                  data-inline="false"
+                ></span>
+              </h1>
+            </div>
+            <div class="about-text col-lg-6">
+              <h3>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et,
+                architecto.
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Perspiciatis similique ea vero debitis sed sint quis dolores!
+                Quidem ratione temporibus voluptas minima harum blanditiis animi
+                fugiat atque laboriosam tempore, commodi laborum recusandae
+                doloribus quod, eaque pariatur, cupiditate maiores explicabo
+                sunt praesentium deserunt obcaecati? Ea tenetur sit voluptatum
+                nisi maiores facere.
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- projects page -->
+      <!-- projects page -->
 
-    <section class="projects" id="projects">
-      <div class="container">
+      <section class="projects" id="projects">
+        <div class="container">
           <div class="row">
             <div class="camera-icon col-lg-2">
               <span
@@ -102,105 +111,126 @@
               ></span>
             </div>
             <div class="capture col-lg-1">
-              <h1>CAPTURES</h1>
+              <!-- <h1>CAPTURES</h1> -->
             </div>
           </div>
-      </div>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="pic col-lg-6">
-            <img src="Assets/1.jpg" class="picture img-responsive fit-image" />
-          </div>
-          <div class="pic col-lg-6">
-            <img src="Assets/2.jpg" class="picture img-responsive fit-image" />
-          </div>
         </div>
-        <div class="row">
-          <div class="col-lg-6">
-            <img src="Assets/5.jpg" class="picture img-responsive fit-image" />
-          </div>
-          <div class="pic pic-4 col-lg-6">
-            <img src="Assets/3.jpg" class="picture img-responsive fit-image" />
-          </div>
-        </div>
-        <div class="row">
-          <div class="pic pic-5 col-lg-6">
-            <img src="Assets/4.jpg" class="picture img-responsive fit-image" />
-          </div>
-          <div class="pic pic-6 col-lg-6">
-            <img src="Assets/6.jpg" class="picture img-responsive fit-image" />
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- contacts page -->
-
-    <section class="contacts" id="contacts">
-      <div class="container">
-        <div class="row">
-          <div class="contacts-title col-lg-6"><h1>Reach out</h1></div>
-          <div class="contacts-text col-lg-6">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
-              perspiciatis aliquam natus earum laboriosam nemo temporibus animi
-              voluptatem assumenda numquam?
-            </p>
-          </div>
-        </div>
-
-        <div class="contacts-social">
+        <div class="container-fluid">
           <div class="row">
-            <div class="insta col-lg-2">
-              <a
-                href="#"
-                data-toggle="tooltip"
-                data-placement="top"
-                title="Professioanlism"
-                ><span
-                  class="iconify"
-                  data-icon="ant-design:instagram-filled"
-                  data-inline="false"
-                ></span
-              ></a>
+            <div class="pic col-lg-6">
+              <img
+                src="Assets/1.jpg"
+                class="picture img-responsive fit-image"
+              />
             </div>
-            <div class="yt col-lg-2">
-              <a
-                href="#"
-                data-toggle="tooltip"
-                data-placement="top"
-                title="Youtube"
-                ><span
-                  class="iconify"
-                  data-icon="akar-icons:youtube-fill"
-                  data-inline="false"
-                ></span
-              ></a>
+            <div class="pic col-lg-6">
+              <img
+                src="Assets/2.jpg"
+                class="picture img-responsive fit-image"
+              />
             </div>
-            <div class="twitter col-lg-2">
-              <a
-                href="#"
-                data-toggle="tooltip"
-                data-placement="top"
-                title="twitter"
-                ><span
-                  class="iconify"
-                  data-icon="akar-icons:twitter-fill"
-                  data-inline="false"
-                ></span
-              ></a>
+          </div>
+          <div class="row">
+            <div class="col-lg-6">
+              <img
+                src="Assets/5.jpg"
+                class="picture img-responsive fit-image"
+              />
+            </div>
+            <div class="pic pic-4 col-lg-6">
+              <img
+                src="Assets/3.jpg"
+                class="picture img-responsive fit-image"
+              />
+            </div>
+          </div>
+          <div class="row">
+            <div class="pic pic-5 col-lg-6">
+              <img
+                src="Assets/4.jpg"
+                class="picture img-responsive fit-image"
+              />
+            </div>
+            <div class="pic pic-6 col-lg-6">
+              <img
+                src="Assets/6.jpg"
+                class="picture img-responsive fit-image"
+              />
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- copyright footer -->
+      <!-- contacts page -->
 
-    <footer>
-      <div class="container-fluid">
-        &copy; Copyrights 2021 by Aryan Sharma. All Rights Reserved.
-      </div>
-    </footer>
+      <section class="contacts" id="contacts">
+        <div class="container">
+          <div class="row">
+            <div class="contacts-title col-lg-6"><h1>Reach out</h1></div>
+            <div class="contacts-text col-lg-6">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
+                perspiciatis aliquam natus earum laboriosam nemo temporibus
+                animi voluptatem assumenda numquam?
+              </p>
+            </div>
+          </div>
+
+          <div class="col-lg-12 text-center">
+            <div class="contacts-social">
+              <ul>
+                <li>
+                  <a
+                    href="#"
+                    data-toggle="tooltip"
+                    data-placement="top"
+                    title="Professioanlism"
+                    ><span
+                      class="iconify"
+                      data-icon="ant-design:instagram-filled"
+                      data-inline="false"
+                    ></span
+                  ></a>
+                </li>
+                <li>
+                  <a
+                    href="#"
+                    data-toggle="tooltip"
+                    data-placement="top"
+                    title="Youtube"
+                    ><span
+                      class="iconify"
+                      data-icon="akar-icons:youtube-fill"
+                      data-inline="false"
+                    ></span
+                  ></a>
+                </li>
+                <li class="wow fadeInUp" data-wow-delay="0.9s">
+                  <a
+                    href="#"
+                    data-toggle="tooltip"
+                    data-placement="top"
+                    title="twitter"
+                    ><span
+                      class="iconify"
+                      data-icon="akar-icons:twitter-fill"
+                      data-inline="false"
+                    ></span
+                  ></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- copyright footer -->
+
+      <footer>
+        <div class="container-fluid">
+          &copy; Copyrights 2021 by Aryan Sharma. All Rights Reserved.
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
