--- a/index.html
+++ b/index.html
@@ -53,12 +53,14 @@
       <!-- homepage -->
 
       <section class="home" id="home">
+        <div class="container">
         <div class="name-main">
           <h1 data-splitting data-aos="animation">ARYAN SHARMA</h1>
         </div>
         <div class="image-main">
           <img src="Assets/main.jpg" class="main-img img-responsive" />
         </div>
+      </div>
       </section>
 
       <!-- about page -->
@@ -213,10 +215,11 @@
               <ul>
                 <li>
                   <a
-                    href="#"
+                    href="https://www.instagram.com/professionalism__/"
+                    target="_blank"
                     data-toggle="tooltip"
                     data-placement="top"
-                    title="Professioanlism"
+                    title="professionalism__"
                     ><span
                       class="iconify"
                       data-icon="ant-design:instagram-filled"
@@ -226,10 +229,11 @@
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="https://www.youtube.com/c/LostFist"
+                    target="_blank"
                     data-toggle="tooltip"
                     data-placement="top"
-                    title="Youtube"
+                    title="LostFist"
                     ><span
                       class="iconify"
                       data-icon="akar-icons:youtube-fill"
@@ -239,10 +243,11 @@
                 </li>
                 <li class="wow fadeInUp" data-wow-delay="0.9s">
                   <a
-                    href="#"
+                    href="https://twitter.com/sharma_aryan__"
+                    target="_blank"
                     data-toggle="tooltip"
                     data-placement="top"
-                    title="twitter"
+                    title="sharma_aryan__"
                     ><span
                       class="iconify"
                       data-icon="akar-icons:twitter-fill"
