--- a/index.html
+++ b/index.html
@@ -9,22 +9,13 @@
     <!-- Jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- Bootstrap -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- aos -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- splitting.js -->
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/splitting/dist/splitting.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/splitting/dist/splitting-cells.css"
-    />
+    <link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting.css" />
+    <link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting-cells.css" />
     <title>Aryan Sharma</title>
   </head>
   <body>
@@ -68,7 +59,7 @@
       <section class="about" id="about">
         <div class="container">
           <div class="row">
-            <div class="about-title col-lg-6" data-aos="fade-up">
+            <div class="about-title col-lg-6" data-aos="fade-up" data-aos-mirror="false">
               <h1>About me</h1>
               <h1>
                 <span
@@ -102,7 +93,7 @@
       <section class="projects" id="projects">
         <div class="container">
           <div class="capture-heading row">
-            <div class="camera-icon col-lg-4" data-aos="fade-up">
+            <div class="camera-icon col-lg-4" data-aos="fade-up" data-aos-mirror="false">
               <span
                 class="iconify"
                 data-icon="ri:camera-lens-fill"
@@ -113,6 +104,7 @@
               class="capture col-lg-4"
               data-aos="fade-up"
               data-aos-delay="50"
+              data-aos-mirror="false"
             >
               <h1>CAPTURES</h1>
             </div>
@@ -146,7 +138,6 @@
                 src="Assets/5.jpg"
                 class="picture img-responsive fit-image"
                 data-aos="img-right"
-                data-aos-delay="50"
               />
             </div>
           </div>
@@ -157,7 +148,6 @@
                 src="Assets/3.jpg"
                 class="picture img-responsive fit-image"
                 data-aos="img-left"
-                data-aos-delay="50"
               />
             </div>
           </div>
@@ -167,7 +157,6 @@
                 src="Assets/4.jpg"
                 class="picture img-responsive fit-image"
                 data-aos="img-right"
-                data-aos-delay="100"
               />
             </div>
           </div>
@@ -190,7 +179,7 @@
       <section class="contacts" id="contacts">
         <div class="container">
           <div class="row">
-            <div class="contacts-title col-lg-6" data-aos="fade-up">
+            <div class="contacts-title col-lg-6" data-aos="fade-up" data-aos-mirror="false">
               <h1>Reach out</h1>
             </div>
             <div
@@ -210,7 +199,6 @@
             <div
               class="contacts-social"
               data-aos="flip-left"
-              data-aos-delay="150"
             >
               <ul>
                 <li>
