Font style update

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <section class="home" id="home">
         <div class="container">
         <div class="name-main">
-          <h1 data-splitting data-aos="animation">ARYAN SHARMA</h1>
+          <h1 data-splitting >ARYAN SHARMA</h1>
         </div>
         <div class="image-main">
           <img src="Assets/main.jpg" class="main-img img-responsive" />
