--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <!-- homepage -->
 
       <section class="home" id="home">
-        <div class="container">
+        <div class="container-fluid">
         <div class="name-main">
           <h1 data-splitting >ARYAN SHARMA</h1>
         </div>
