--- a/index.html
+++ b/index.html
@@ -1,271 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta name="Description" content="Page Description" />
-    <meta http-equiv="Content-Type" content="text/html" ; charset="utf=8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="Assets/camera2.svg" />
-    <!-- Jquery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- aos -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <!-- splitting.js -->
-    <link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting.css" />
-    <link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting-cells.css" />
-    <title>Aryan Sharma</title>
-  </head>
-  <body>
-    <div class="wrapper">
-      <!-- navbar -->
 
-      <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
-        <span class="navbar-brand" href="#">Aryan Sharma</span>
-        <span
-          class="navbar-toggler hamburger hamburger-icon"
-          data-toggle="collapse"
-          data-target="#navbarNavAltMarkup"
-          ><span></span
-        ></span>
+<head>
+  <meta name="Description" content="Page Description" />
+  <meta http-equiv="Content-Type" content="text/html" ; charset="utf=8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Primary Meta Tags -->
+  <title>Aryan Sharma</title>
+  <meta name="title" content="Aryan Sharma">
+  <meta name="description" content="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et, architecto.">
 
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ml-lg-auto">
-            <a class="nav-item nav-link" href="#"> Home </a>
-            <a class="nav-item nav-link" href="#about"> About </a>
-            <a class="nav-item nav-link" href="#projects"> Projects </a>
-            <a class="nav-item nav-link" href="#contacts"> Contacts </a>
-          </div>
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://drish-xd.is-a.dev/Photographer-Website/">
+  <meta property="og:title" content="Aryan Sharma">
+  <meta property="og:description" content="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et, architecto.">
+  <meta property="og:image" content="https://drish-xd.is-a.dev/Photographer-Website/Assets/Screenshot.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://drish-xd.is-a.dev/Photographer-Website/">
+  <meta property="twitter:title" content="Aryan Sharma">
+  <meta property="twitter:description" content="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et, architecto.">
+  <meta property="twitter:image" content="https://drish-xd.is-a.dev/Photographer-Website/Assets/Screenshot.png">
+  <link rel="stylesheet" href="style.css" />
+  <link rel="shortcut icon" type="image/x-icon" href="Assets/camera2.svg" />
+  <!-- Jquery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- aos -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <!-- splitting.js -->
+  <link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting.css" />
+  <link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting-cells.css" />
+</head>
+
+<body>
+  <div class="wrapper">
+    <!-- navbar -->
+
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
+      <span class="navbar-brand" href="#">Aryan Sharma</span>
+      <span class="navbar-toggler hamburger hamburger-icon" data-toggle="collapse" data-target="#navbarNavAltMarkup"><span></span></span>
+
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav ml-lg-auto">
+          <a class="nav-item nav-link" href="#"> Home </a>
+          <a class="nav-item nav-link" href="#about"> About </a>
+          <a class="nav-item nav-link" href="#projects"> Projects </a>
+          <a class="nav-item nav-link" href="#contacts"> Contacts </a>
         </div>
-      </nav>
+      </div>
+    </nav>
 
-      <!-- homepage -->
+    <!-- homepage -->
 
-      <section class="home" id="home">
-        <div class="container-fluid">
+    <section class="home" id="home">
+      <div class="container-fluid">
         <div class="name-main">
-          <h1 data-splitting >ARYAN SHARMA</h1>
+          <h1 data-splitting>ARYAN SHARMA</h1>
         </div>
         <div class="image-main">
           <img src="Assets/main.jpg" class="main-img img-responsive" />
         </div>
       </div>
-      </section>
+    </section>
 
-      <!-- about page -->
+    <!-- about page -->
 
-      <section class="about" id="about">
-        <div class="container">
-          <div class="row">
-            <div class="about-title col-lg-6" data-aos="fade-up" data-aos-mirror="false">
-              <h1>About me</h1>
-              <h1>
-                <span
-                  class="iconify"
-                  data-icon="mdi:account"
-                  data-inline="false"
-                ></span>
-              </h1>
-            </div>
-            <div class="about-text col-lg-6">
-              <h3 data-aos="fade-up" data-aos-delay="100">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et,
-                architecto.
-              </h3>
-              <p data-aos="fade-up" data-aos-delay="150">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Perspiciatis similique ea vero debitis sed sint quis dolores!
-                Quidem ratione temporibus voluptas minima harum blanditiis animi
-                fugiat atque laboriosam tempore, commodi laborum recusandae
-                doloribus quod, eaque pariatur, cupiditate maiores explicabo
-                sunt praesentium deserunt obcaecati? Ea tenetur sit voluptatum
-                nisi maiores facere.
-              </p>
-            </div>
+    <section class="about" id="about">
+      <div class="container">
+        <div class="row">
+          <div class="about-title col-lg-6" data-aos="fade-up" data-aos-mirror="false">
+            <h1>About me</h1>
+            <h1>
+              <span class="iconify" data-icon="mdi:account" data-inline="false"></span>
+            </h1>
+          </div>
+          <div class="about-text col-lg-6">
+            <h3 data-aos="fade-up" data-aos-delay="100">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et,
+              architecto.
+            </h3>
+            <p data-aos="fade-up" data-aos-delay="150">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perspiciatis similique ea vero debitis sed sint quis dolores!
+              Quidem ratione temporibus voluptas minima harum blanditiis animi
+              fugiat atque laboriosam tempore, commodi laborum recusandae
+              doloribus quod, eaque pariatur, cupiditate maiores explicabo
+              sunt praesentium deserunt obcaecati? Ea tenetur sit voluptatum
+              nisi maiores facere.
+            </p>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <!-- projects page -->
+    <!-- projects page -->
 
-      <section class="projects" id="projects">
-        <div class="container">
-          <div class="capture-heading row">
-            <div class="camera-icon col-lg-4" data-aos="fade-up" data-aos-mirror="false">
-              <span
-                class="iconify"
-                data-icon="ri:camera-lens-fill"
-                data-inline="true"
-              ></span>
-            </div>
-            <div
-              class="capture col-lg-4"
-              data-aos="fade-up"
-              data-aos-delay="50"
-              data-aos-mirror="false"
-            >
-              <h1>CAPTURES</h1>
-            </div>
+    <section class="projects" id="projects">
+      <div class="container">
+        <div class="capture-heading row">
+          <div class="camera-icon col-lg-4" data-aos="fade-up" data-aos-mirror="false">
+            <span class="iconify" data-icon="ri:camera-lens-fill" data-inline="true"></span>
+          </div>
+          <div class="capture col-lg-4" data-aos="fade-up" data-aos-delay="50" data-aos-mirror="false">
+            <h1>CAPTURES</h1>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-fluid">
+        <div class="row">
+          <div class="pic pic-1 col-lg-12">
+            <img src="Assets/1.jpg" class="picture img-responsive fit-image" data-aos="img-right" />
           </div>
         </div>
 
-        <div class="container-fluid">
-          <div class="row">
-            <div class="pic pic-1 col-lg-12">
-              <img
-                src="Assets/1.jpg"
-                class="picture img-responsive fit-image"
-                data-aos="img-right"
-              />
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="pic pic-2 col-lg-12">
-              <img
-                src="Assets/2.jpg"
-                class="picture img-responsive fit-image"
-                data-aos="img-left"
-              />
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="pic pic-3 col-lg-12">
-              <img
-                src="Assets/5.jpg"
-                class="picture img-responsive fit-image"
-                data-aos="img-right"
-              />
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="pic pic-4 col-lg-12">
-              <img
-                src="Assets/3.jpg"
-                class="picture img-responsive fit-image"
-                data-aos="img-left"
-              />
-            </div>
-          </div>
-          <div class="row">
-            <div class="pic pic-5 col-lg-12">
-              <img
-                src="Assets/4.jpg"
-                class="picture img-responsive fit-image"
-                data-aos="img-right"
-              />
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="pic pic-6 col-lg-12">
-              <img
-                src="Assets/6.jpg"
-                class="picture img-responsive fit-image"
-                data-aos="img-left"
-                data-aos-delay="100"
-              />
-            </div>
+        <div class="row">
+          <div class="pic pic-2 col-lg-12">
+            <img src="Assets/2.jpg" class="picture img-responsive fit-image" data-aos="img-left" />
           </div>
         </div>
-      </section>
 
-      <!-- contacts page -->
-
-      <section class="contacts" id="contacts">
-        <div class="container">
-          <div class="row">
-            <div class="contacts-title col-lg-6" data-aos="fade-up" data-aos-mirror="false">
-              <h1>Reach out</h1>
-            </div>
-            <div
-              class="contacts-text col-lg-6"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
-                perspiciatis aliquam natus earum laboriosam nemo temporibus
-                animi voluptatem assumenda numquam?
-              </p>
-            </div>
-          </div>
-
-          <div class="col-lg-12 text-center">
-            <div
-              class="contacts-social"
-              data-aos="flip-left"
-            >
-              <ul>
-                <li>
-                  <a
-                    href="https://www.instagram.com/professionalism__/"
-                    target="_blank"
-                    data-toggle="tooltip"
-                    data-placement="top"
-                    title="professionalism__"
-                    ><span
-                      class="iconify"
-                      data-icon="ant-design:instagram-filled"
-                      data-inline="false"
-                    ></span
-                  ></a>
-                </li>
-                <li>
-                  <a
-                    href="https://www.youtube.com/c/LostFist"
-                    target="_blank"
-                    data-toggle="tooltip"
-                    data-placement="top"
-                    title="LostFist"
-                    ><span
-                      class="iconify"
-                      data-icon="akar-icons:youtube-fill"
-                      data-inline="false"
-                    ></span
-                  ></a>
-                </li>
-                <li class="wow fadeInUp" data-wow-delay="0.9s">
-                  <a
-                    href="https://twitter.com/sharma_aryan__"
-                    target="_blank"
-                    data-toggle="tooltip"
-                    data-placement="top"
-                    title="sharma_aryan__"
-                    ><span
-                      class="iconify"
-                      data-icon="akar-icons:twitter-fill"
-                      data-inline="false"
-                    ></span
-                  ></a>
-                </li>
-              </ul>
-            </div>
+        <div class="row">
+          <div class="pic pic-3 col-lg-12">
+            <img src="Assets/5.jpg" class="picture img-responsive fit-image" data-aos="img-right" />
           </div>
         </div>
-      </section>
 
-      <!-- copyright footer -->
-
-      <footer>
-        <div class="container-fluid">
-          &copy; Copyrights 2021 by Aryan Sharma. All Rights Reserved.
+        <div class="row">
+          <div class="pic pic-4 col-lg-12">
+            <img src="Assets/3.jpg" class="picture img-responsive fit-image" data-aos="img-left" />
+          </div>
         </div>
-      </footer>
+        <div class="row">
+          <div class="pic pic-5 col-lg-12">
+            <img src="Assets/4.jpg" class="picture img-responsive fit-image" data-aos="img-right" />
+          </div>
+        </div>
 
-      <!-- PARALLAX -->
-      <script src="https://cdn.jsdelivr.net/npm/simple-parallax-js@5.5.1/dist/simpleParallax.min.js"></script>
-      <!-- Icons -->
-      <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
-      <!-- AOS -->
-      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-      <!-- splitting.js -->
-      <script src="https://unpkg.com/splitting/dist/splitting.min.js"></script>
-      <script src="script.js"></script>
-    </div>
-  </body>
+        <div class="row">
+          <div class="pic pic-6 col-lg-12">
+            <img src="Assets/6.jpg" class="picture img-responsive fit-image" data-aos="img-left" data-aos-delay="100" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- contacts page -->
+
+    <section class="contacts" id="contacts">
+      <div class="container">
+        <div class="row">
+          <div class="contacts-title col-lg-6" data-aos="fade-up" data-aos-mirror="false">
+            <h1>Reach out</h1>
+          </div>
+          <div class="contacts-text col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
+              perspiciatis aliquam natus earum laboriosam nemo temporibus
+              animi voluptatem assumenda numquam?
+            </p>
+          </div>
+        </div>
+
+        <div class="col-lg-12 text-center">
+          <div class="contacts-social" data-aos="flip-left">
+            <ul>
+              <li>
+                <a href="https://www.instagram.com/professionalism__/" target="_blank" data-toggle="tooltip" data-placement="top" title="professionalism__"><span class="iconify" data-icon="ant-design:instagram-filled" data-inline="false"></span></a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/c/LostFist" target="_blank" data-toggle="tooltip" data-placement="top" title="LostFist"><span class="iconify" data-icon="akar-icons:youtube-fill" data-inline="false"></span></a>
+              </li>
+              <li class="wow fadeInUp" data-wow-delay="0.9s">
+                <a href="https://twitter.com/sharma_aryan__" target="_blank" data-toggle="tooltip" data-placement="top" title="sharma_aryan__"><span class="iconify" data-icon="akar-icons:twitter-fill" data-inline="false"></span></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- copyright footer -->
+
+    <footer>
+      <div class="container-fluid">
+        &copy; Copyrights 2021 by Aryan Sharma. All Rights Reserved.
+      </div>
+    </footer>
+
+    <!-- PARALLAX -->
+    <script src="https://cdn.jsdelivr.net/npm/simple-parallax-js@5.5.1/dist/simpleParallax.min.js"></script>
+    <!-- Icons -->
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <!-- splitting.js -->
+    <script src="https://unpkg.com/splitting/dist/splitting.min.js"></script>
+    <script src="script.js"></script>
+  </div>
+</body>
+
 </html>
