--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <meta property="twitter:title" content="Aryan Sharma">
   <meta property="twitter:description" content="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et, architecto.">
   <meta property="twitter:image" content="https://drish-xd.is-a.dev/Photographer-Website/Assets/Screenshot.png">
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://drish-xd.is-a.dev/Photographer-Website/" />
   <link rel="stylesheet" href="style.css" />
   <link rel="shortcut icon" type="image/x-icon" href="Assets/camera2.svg" />
   <!-- Jquery -->
