Changes Lorem ipsum

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               fugiat atque laboriosam tempore, commodi laborum recusandae
               doloribus quod, eaque pariatur, cupiditate maiores explicabo
               sunt praesentium deserunt obcaecati? Ea tenetur sit voluptatum
-              nisi maiores facere.
+              nisi maiores facere Lorem, ipsum dolor.
             </p>
           </div>
         </div>
